[package]
name = "tenhou_dl"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3.10"
wiremock = "0.6.2"