[package]
name = "tenhou_dl"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
flate2 = "1.0.35"
scraper = "0.22.0"
anyhow = "1.0.95"
rayon = "1.10.0"
url = "2.5.4"
regex = "1.11.1"
tokio-stream = "0.1.17"

[dev-dependencies]
tempfile = "3.10"
wiremock = "0.6.2"
